--- a/app/src/main/res/layout/custom_card_item.xml
+++ b/app/src/main/res/layout/custom_card_item.xml
@@ -107,7 +107,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="{fa-map-marker}"
-                        android:textColor="@color/secondary_text" />
+                        android:textColor="@color/colorPrimary" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorAccent"
+                        android:background="@drawable/bg_border_primary"
                         android:gravity="center|center_vertical"
                         android:minWidth="60dp"
                         android:orientation="horizontal"
@@ -140,7 +140,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="{fa-user}"
-                            android:textColor="@color/icons"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="12sp" />
 
                         <TextView
@@ -148,7 +148,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="3dp"
                             android:text="1.2k"
-                            android:textColor="@color/icons"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -157,7 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
-                        android:background="@color/secondary_text"
+                        android:background="@drawable/bg_border_primary"
                         android:gravity="center|center_vertical"
                         android:minWidth="60dp"
                         android:orientation="horizontal"
@@ -170,7 +170,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="{fa-star}"
-                            android:textColor="@color/icons"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="12sp" />
 
                         <TextView
@@ -178,7 +178,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="3dp"
                             android:text="1.5k"
-                            android:textColor="@color/icons"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="12sp" />
                     </LinearLayout>
 
