--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -209,7 +209,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
         android:elevation="5dp"
-        android:src="@drawable/credit_card_multiple_primary"
+        android:src="@drawable/member_card"
         app:backgroundTint="@color/icons"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
