--- a/app/src/main/res/layout/fragment_outlet.xml
+++ b/app/src/main/res/layout/fragment_outlet.xml
@@ -10,4 +10,11 @@
         android:layout_height="5dp"
         android:background="@drawable/bg_grandient" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 </LinearLayout>
