--- a/app/src/main/res/layout/custom_outlet.xml
+++ b/app/src/main/res/layout/custom_outlet.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
