--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -207,9 +207,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
-        android:elevation="5dp"
+        android:elevation="10dp"
         android:src="@drawable/member_card"
-        app:backgroundTint="@color/icons"
+        app:backgroundTint="@color/red_light"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end"
         app:theme="@style/ThemeOverlay.AppCompat.Light" />
