--- a/app/src/main/res/layout/custom_review.xml
+++ b/app/src/main/res/layout/custom_review.xml
@@ -20,20 +20,24 @@
             android:layout_height="40dp"
             android:src="@drawable/img_brown" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Tima RUPP"
-            android:textColor="@color/primary_text" />
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="right"
-            android:text="04 Nov 2016"
-            android:textSize="12sp" />
+            android:orientation="vertical"
+            android:paddingLeft="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tima RUPP"
+                android:textColor="@color/primary_text" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="04 Nov 2016"
+                android:textSize="11sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
