--- a/app/src/main/res/layout/dialog_discount.xml
+++ b/app/src/main/res/layout/dialog_discount.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/divider_light"
     android:orientation="vertical">
 
@@ -26,6 +27,63 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="10dp">
+
+        <com.hammersmith.cammembercard.RoundedImageView
+            android:id="@+id/profile"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/divider"
+            android:elevation="5dp"
+            android:padding="2dp"
+            android:src="@drawable/img_brown"
+            app:border_width="0dip"
+            app:is_oval="true"
+            app:round_background="true" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:text="{fa-star}"
+                android:textColor="@color/red_light" />
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:text="{fa-star}"
+                android:textColor="@color/red_light" />
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:text="{fa-star}"
+                android:textColor="@color/red_light" />
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:text="{fa-star-o}"
+                android:textColor="@color/red_light" />
+
+            <com.joanzapata.iconify.widget.IconTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="2dp"
+                android:text="{fa-star-o}"
+                android:textColor="@color/red_light" />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
