--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="divider">#dcdcdc</color>
     <color name="divider_light">#f5f5f5</color>
     <color name="red">#e12f07</color>
+    <color name="red_light">#f44e28</color>
+    <color name="facebook">#3b5998</color>
+    <color name="green">#28c748</color>
+    <color name="red_dark">#c92702</color>
 </resources>
