--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -98,7 +98,7 @@
                     android:textSize="14sp" />
 
                 <LinearLayout
-                    android:id="@+id/l_login"
+                    android:id="@+id/register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
