--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -11,14 +11,14 @@
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="15dp">
 
-        <ImageView
+        <com.joanzapata.iconify.widget.IconTextView
             android:id="@+id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/close_circle"
-            android:textColor="@color/primary_light"/>
+            android:textColor="@color/primary_light"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <LinearLayout
