--- a/app/src/main/res/layout/fragment_condition.xml
+++ b/app/src/main/res/layout/fragment_condition.xml
@@ -42,6 +42,7 @@
                 android:paddingLeft="10dp"
                 android:paddingTop="20dp"
                 android:text="Term and Condition"
+                android:textColor="@color/primary_text"
                 android:textSize="14sp" />
 
             <LinearLayout
@@ -65,7 +66,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above, only one scanning for each table , no splitting of bills or tables allowed."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -73,6 +74,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -85,7 +87,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -93,6 +95,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -105,7 +108,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -113,6 +116,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -125,7 +129,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -133,6 +137,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -145,7 +150,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -153,6 +158,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -165,7 +171,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -173,6 +179,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -185,7 +192,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -193,6 +200,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -205,7 +213,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:lineSpacingExtra="7dp"
+                        android:lineSpacingExtra="5dp"
                         android:text="Discount only entitled for minimum spend of USD 15 and above."
                         android:textSize="14sp" />
                 </LinearLayout>
