--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -47,8 +47,8 @@
                 android:paddingBottom="10dp">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:src="@drawable/photo" />
 
             </LinearLayout>
@@ -61,14 +61,15 @@
                 android:paddingBottom="5dp"
                 android:paddingTop="5dp">
 
-                    <EditText
+                <EditText
                     android:id="@+id/edComment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_comment"
                     android:hint="Write a comment"
                     android:minLines="2"
-                    android:paddingLeft="10dp" />
+                    android:paddingLeft="10dp"
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <LinearLayout
