--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/primary_light"
-            android:textSize="30sp" />
+            android:textSize="40sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -30,22 +30,27 @@
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineSpacingExtra="10dp"
             android:padding="20dp"
-            android:textColor="@color/primary_text" />
+            android:textColor="@color/primary_text"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="end|center_vertical"
-        android:orientation="horizontal">
+        android:gravity="right"
+        android:orientation="horizontal"
+        android:weightSum="2">
 
         <TextView
             android:id="@+id/cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:gravity="center"
             android:padding="15dp"
             android:text="Cancel"
             android:textAllCaps="true"
@@ -54,10 +59,12 @@
 
         <TextView
             android:id="@+id/ok"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="?attr/selectableItemBackground"
             android:clickable="true"
+            android:gravity="center"
             android:paddingBottom="15dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
