--- a/app/src/main/res/layout/custom_card_item.xml
+++ b/app/src/main/res/layout/custom_card_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -14,9 +14,7 @@
         android:layout_margin="5dp"
         android:elevation="5dp"
         card_view:cardBackgroundColor="@android:color/white"
-        card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardElevation="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,22 +124,28 @@
                         android:layout_weight="1.3"
                         android:orientation="vertical">
 
-
-                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/card_view_inner"
+                        <android.support.v7.widget.CardView
                             android:layout_width="80dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center"
-                            card_view:cardBackgroundColor="@android:color/transparent"
-                            card_view:cardCornerRadius="5dp"
-                            card_view:cardElevation="5dp">
+                            android:layout_margin="05dp"
+                            android:elevation="5dp"
+                            app:cardCornerRadius="5dp"
+                            card_view:cardBackgroundColor="@android:color/white"
+                            card_view:cardElevation="2dp">
 
-                            <ImageView
-                                android:id="@+id/image_card"
+                            <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:scaleType="centerCrop"/>
+                                android:layout_height="wrap_content">
 
+                                <ImageView
+                                    android:id="@+id/image_card"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:scaleType="fitXY">
+
+                                </ImageView>
+                            </LinearLayout>
                         </android.support.v7.widget.CardView>
 
                     </LinearLayout>
