--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/member_card"
             android:icon="@drawable/credit_card"
             android:title="Membership Cards" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/collection"
             android:icon="@drawable/credit_card_multiple"
             android:title="Collection" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/gift"
-            android:title="Member Privileges" />
+            android:icon="@drawable/wallet_giftcard_white"
+            android:title="Most Used" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/file_document_box"
