--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03A9F4</color>
     <color name="primary_light">#b9daf5</color>
     <color name="primary_text">#212121</color>
+    <color name="primary_text_light">#2d2d2d</color>
     <color name="secondary_text">#5b5b5b</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#d1d0d0</color>
